# green-white-agent

./: .gitignore  A2A_COMPLIANCE_SUMMARY.md  A2A_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  COMPLETE_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TEST_RESULTS.md  analyze_results.py  debug_demo.py  debug_file_task.py  debug_sandbox_state.py  demo_green_agent.py  demo_real_terminalbench.py  demo_terminalbench_system.py  disk_usage_monitor.sh  find_large_files.sh  launcher.py  list_txt_files.sh  pyproject.toml  requirements.txt  run_agent.py  sample_terminal_bench.json  setup.py  setup_conda.sh  simple_white_agent.py  tb_011.yaml  terminal_bench_a2a_test_suite.json  test_a2a_integration.py  test_a2a_protocol.py  test_a2a_setup.py  test_green_agent.py  test_white_agent_debug.py  utils.py
agentbeats/: README.md
base_white_agent/: agent.py  run.sh  start_agentbeats.sh
data/: .gitkeep
evolved_white_agent/: agent.py  run.sh  start_agentbeats.sh
examples/: __init__.py  debug_demo.py  debug_file_task.py  debug_sandbox_state.py  debug_white_agent_response.py  demo_green_agent.py  demo_real_terminalbench.py  demo_terminalbench_system.py
green_agent/: __init__.py  agent.py  attempt_store.py  cache_task_names.py  evaluation.py  results_store.py  run.sh  sandbox_manager.py  start_agentbeats.sh  task_evaluator.py  task_names_cache.json  terminal_bench_green_agent.toml  terminal_bench_runner.py
green_agent/dataset_loaders/: terminal_bench_loader.py
results/: gpt-4o-mini.json
results/20251208_212447_630734dd/: trajectories.json
results/20251208_212534_b65ee3a9/: trajectories.json
scripts/: __init__.py  generate_synthetic_data.py  run_agent.py  terminal_bench_to_a2a_converter.py
tests/: __init__.py  test_a2a_protocol.py  test_simple_tb_task.py  test_white_agent_debug.py
utils/: __init__.py  calculate_stats.py  extract_conversations.py  generate_synthetic_data.py  utils.py
white_agent/: __init__.py  a2a_protocol.py  agent.py  requirements.txt  run.sh  simple_agent.py
(+25 files in other folders)
